# gerrit-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/: CLI_REFERENCE.md
gemini-cli-extensions/: README.md  gemini-extension.json
gemini-cli-extensions/commands/: review.toml
plugins/gerrit/: .gitignore  README.md
plugins/gerrit/.claude-plugin/: plugin.json
plugins/gerrit/commands/: review.md
skills/gerrit/: README.md
skills/gerrit/.claude-plugin/: plugin.json
skills/gerrit/commands/: review.md
skills/gerrit/skills/gerrit-reviewer/: SKILL.md
src/gerrit_cli/: __init__.py  __main__.py  cli.py  config.py
src/gerrit_cli/client/: __init__.py  api.py  models.py
src/gerrit_cli/commands/: __init__.py  change.py  review.py
src/gerrit_cli/formatters/: __init__.py  base.py  json.py  table.py
src/gerrit_cli/utils/: exceptions.py  helpers.py  show_parts.py
tests/: conftest.py  test_client.py  test_commands.py  test_formatters.py  test_inline_comments.py  test_models.py
