[project]
name = "gerrit-agent-skill"
version = "0.1.0"
description = "An AI-powered Agent and CLI for Gerrit Code Review"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "madroid", email = "madroidmaq@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
    "gerrit",
    "code-review",
    "cli",
    "ai",
    "llm",
    "agent",
    "claude-code",
    "gemini-cli",
    "codex",
    "git",
    "devtools",
    "code-analysis",
    "github-cli",
    "ai-powered",
    "code-quality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/madroidmaq/gerrit-agent-skill"
Repository = "https://github.com/madroidmaq/gerrit-agent-skill"
Issues = "https://github.com/madroidmaq/gerrit-agent-skill/issues"

[project.scripts]
gerrit = "gerrit_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gerrit_cli"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
